Fix catalog vertical alignment (back to baseline).

--- a/assets/css/project/catalog.less
+++ b/assets/css/project/catalog.less
@@ -61,7 +61,7 @@
 	width: 30%;
 	margin-right: 3%;
 	display: inline-block;
-	vertical-align: top;
+	vertical-align: baseline;
 	}
 
 @media (min-width: 1200px) {
